css/style.css
main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h2 {
  font-size: 2rem;
}

.search {
  display: flex;
  align-items: center;
}

.search-field {
  margin-right: 1rem;
}

.search-result {
  display: flex;
  align-content: space-between;
  margin: 1rem 1rem;
}

section {
  display: flex;
  flex-direction: column;
  border: 1px solid lightgray;
  padding: 1rem;
}

.users {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.card {
  width: 14rem;
  margin: 0.6rem;
}

.stats {
  min-width: 17rem;
}

.stat {
  font-size: 1.1rem;
}

